test/corpus/comments.txt
================================================================================
comment
================================================================================

--
-- single-line comment, below an empty single-line comment

--[[]]

--[[
print("block comment")
--]]

--[[
print("block comment")
]]

-- [[
print("not block comment")
--]]

--[=[[print("level 1 block comment")]]=]

--[=[
  [print("level 1 block comment")]
]=]

--[=[
  [print("level 1 block comment")
]=]

--[=[
  print("level 1 block comment")]
]=]

--[=[
  [[print("level 1 block comment")
]=]

--[=[
  print("level 1 block comment")]]
]=]

--[==[
print("level 2 block comment")
-- ]==]

--[==[
print("level 2 block comment")
]==]

-- [==[
print("not level 2 block comment")
--]==]

--[=================================================================================================================================================================================================================================================================[
print("level 257 block comment")
]=]
[==========[
]=================================================================================================================================================================================================================================================================]

--------------------------------------------------------------------------------

(chunk
  (comment
    content: (comment_content))
  (comment
    content: (comment_content))
  (comment
    content: (comment_content))
  (comment
    content: (comment_content))
  (comment
    content: (comment_content))
  (comment
    content: (comment_content))
  (function_call
    name: (identifier)
    arguments: (arguments
      (string
        content: (string_content))))
  (comment
    content: (comment_content))
  (comment
    content: (comment_content))
  (comment
    content: (comment_content))
  (comment
    content: (comment_content))
  (comment
    content: (comment_content))
  (comment
    content: (comment_content))
  (comment
    content: (comment_content))
  (comment
    content: (comment_content))
  (comment
    content: (comment_content))
  (comment
    content: (comment_content))
  (function_call
    name: (identifier)
    arguments: (arguments
      (string
        content: (string_content))))
  (comment
    content: (comment_content))
  (comment
    content: (comment_content)))
